feat(user): implement get users handler with logic and search query, complete and fix typo in swagger
